--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -11,10 +11,10 @@
         android:layout_height="wrap_content"
         android:text="New Button"
         android:id="@+id/btnChange"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
         android:nestedScrollingEnabled="true"
-        android:onClick="toggleDivises" />
+        android:onClick="toggleDivises"
+        android:layout_above="@+id/txtTo"
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -34,10 +34,10 @@
         android:inputType="numberDecimal"
         android:ems="10"
         android:id="@+id/txtTo"
-        android:layout_below="@+id/btnChange"
+        android:enabled="true"
+        android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/btnChange"
-        android:layout_alignEnd="@+id/btnChange"
-        android:enabled="true" />
+        android:layout_alignEnd="@+id/btnChange" />
 
     <EditText
         android:layout_width="wrap_content"
